# git-ai-commit

./: .justfile  README.md  pyproject.toml
.github/workflows/: ci.yml
src/git_autocommit/: cli.py  git.py
src/git_copilot_commit/: cli.py  git.py  settings.py
